--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,7 @@ footer address.address .address-link {
   color: inherit;
   display: block;
 }
+/* ------- */
 .address-box {
   margin-right: 70px;
 }
