--- a/css/styles.css
+++ b/css/styles.css
@@ -275,9 +275,8 @@ main section.section-hero {
   text-align: center;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(/imeges/hero.jpg);
+      rgba(47, 48, 58, 0.4)),
+    url(../imeges/hero.jpg);
   background-repeat: no-repeat;
   background-size: 1600px;
   background-position: center;
